--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,3 @@
-name: Playwright Tests
-
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
-jobs:
-  test:
-    name: Run Playwright Tests
-    runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,12 +8,15 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
+        working-directory: ./RisilienceTest
         run: npm install
 
       - name: Install Playwright Browsers
+        working-directory: ./RisilienceTest
         run: npx playwright install --with-deps
 
       - name: Run Playwright tests
+        working-directory: ./RisilienceTest
         run: npx playwright test
 
       - name: Upload Playwright report
@@ -34,4 +24,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report/
+          path: RisilienceTest/playwright-report/
